Button and letter spacing fixed

--- a/style.css
+++ b/style.css
@@ -140,7 +140,6 @@ a.color:hover{
 
     p.description.information{
       font-size: 2.2em;
-      letter-spacing: 1px;
       line-height: 1.3em;
     }
     .information{
@@ -176,6 +175,12 @@ a.color:hover{
     .nav{
       text-align: center;
       font-size: 2.3em;
+    }
+
+    .btn{
+      margin-top: 10px;
+      font-size: 1.7em;
+      width: auto;
     }
 
 }
